<resources>
    <string name="app_name">Golden Olympus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="centuries_ago">Centuries ago..</string>
    <string name="the_gods_of_olympus_in_a_rare_moment_of_unity_sought_a_way_to_blend_their_powers_and_create_a_realm_where_mortals_could_be_tested_and_tales_of_valor_could_be_born">the gods of Olympus, in a rare moment of unity, sought a way to blend their powers and create a realm where mortals could be tested and tales of valor could be born.</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="it_all_began">It all began..</string>
    <string name="second_text">when Zeus and Poseidon engaged in a spirited debate about who among mortals was more resilient - those who roamed the skies or those who sailed the seas.</string>
    <string name="athena">Athena,</string>
    <string name="third_text">ever the voice of wisdom, suggested a test, not of might, but of intellect and spirit.

\"Why not craft intricate labyrinths?\" she mused, \"Each echoing the essence of its creator. A true testament to our individual powers, and a challenge to those daring enough to traverse them.\"</string>
    <string name="fourth_text">The idea \nignited a spark,</string>
    <string name="fourth_text2">and each god took to the challenge with gusto. \n \n They shaped mazes that mirrored their domains and powers: Zeus\'s stormy twists and turns, Poseidon\'s unpredictable aquatic corridors, Artemis\'s wild and winding forest trails, Aphrodite\'s beguiling garden paths, Hades\' dark and deceptive tunnels, Apollo\'s melody-driven passages, and Athena\'s puzzling bibliophilic alleys.</string>
    <string name="zeus">Zeus,</string>
    <string name="fifth_text">his voice echoing with the combined might of the heavens, declared: \"These labyrinths shall stand as a testament to the godly and a challenge to the mortal. Whosoever dares to navigate them all shall be etched in legend.\"</string>
    <string name="his_gaze">His gaze,</string>
    <string name="six_text">heavy with the weight of the skies, seems to lock onto yours: \"Dare you, mortal, undertake this Herculean trial? Conquer the Seven, and let your name echo with the immortals.\"</string>
    <string name="and_so_the_timeless_challenge_beckons">And so, the timeless challenge beckons.</string>
    <string name="will_you_rise_to_meet_it">Will you rise to meet it?</string>
    <string name="wrath_of_nthe_sea">Wrath of\nthe Sea</string>
    <string name="_00_00">00:00</string>
    <string name="_10">/10</string>
    <string name="_0">0</string>
    <string name="pause">Pause</string>
    <string name="continue_">continue</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="again">AGAIN!</string>
</resources>